fix spacing mistake

--- a/src/scss/pages/_blog.scss
+++ b/src/scss/pages/_blog.scss
@@ -178,7 +178,7 @@
   font-weight: bold;
   font-size: 0.9em;
   color: #555;
-  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 // Works cited
